--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "keywords": [
     "express-uploader"
   ],
-  "author": "afidev",
+  "author": "affidev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/eabdalmufid/express-uploader/issues"
   },
   "homepage": "https://github.com/eabdalmufid/express-uploader#readme",
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^1.7.7",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -29,7 +29,8 @@
     "form-data": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "path": "^0.12.7", 
+    "node-cron": "^3.0.3",
+    "path": "^0.12.7",
     "ssl-express-www": "^3.0.7"
   }
 }
